style.css
/* ... */
 ul, ol {
     margin: 0 0 1.5em 3em;
}
 ul {
     list-style: disc;
}
 ol {
     list-style: decimal;
}
 li > ul, li > ol {
     margin-bottom: 0;
     margin-left: 1.5em;
}
 dt {
     font-weight: bold;
}
 dd {
     margin: 0 1.5em 1.5em;
}
 img {
     height: auto;
    /* Make sure images are scaled correctly. */
     max-width: 100%;
    /* Adhere to container width. */
}
 table {
     margin: 0 0 1.5em;
     width: 100%;
}
/*-------------------------------------------------------------- 
# Forms 
--------------------------------------------------------------*/
 button, input[type="button"], input[type="reset"], input[type="submit"] {
     border: 1px solid;
     border-color: #ccc #ccc #bbb;
     border-radius: 3px;
     background: #e6e6e6;
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.5), inset 0 15px 17px rgba(255, 255, 255, 0.5), inset 0 -5px 12px rgba(0, 0, 0, 0.05);
     color: rgba(0, 0, 0, .8);
     font-size: 12px;
     font-size: 0.75rem;
     line-height: 1;
     padding: .6em 1em .4em;
     text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8);
}
 button:hover, input[type="button"]:hover, input[type="reset"]:hover, input[type="submit"]:hover {
     border-color: #ccc #bbb #aaa;
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.8), inset 0 15px 17px rgba(255, 255, 255, 0.8), inset 0 -5px 12px rgba(0, 0, 0, 0.02);
}
 button:focus, input[type="button"]:focus, input[type="reset"]:focus, input[type="submit"]:focus, button:active, input[type="button"]:active, input[type="reset"]:active, input[type="submit"]:active {
     border-color: #aaa #bbb #bbb;
     box-shadow: inset 0 -1px 0 rgba(255, 255, 255, 0.5), inset 0 2px 5px rgba(0, 0, 0, 0.15);
}
 input[type="text"], input[type="email"], input[type="url"], input[type="password"], input[type="search"], textarea {
     color: #666;
     border: 1px solid #ccc;
     border-radius: 3px;
}
 input[type="text"]:focus, input[type="email"]:focus, input[type="url"]:focus, input[type="password"]:focus, input[type="search"]:focus, textarea:focus {
     color: #111;
}
 input[type="text"], input[type="email"], input[type="url"], input[type="password"], input[type="search"] {
     padding: 3px;
}
 textarea {
     padding-left: 3px;
     width: 100%;
}
/*-------------------------------------------------------------- 
# Navigation 
--------------------------------------------------------------*/
/*-------------------------------------------------------------- 
## Links 
--------------------------------------------------------------*/
 a {
     color: #4169E1;
}
 a:visited {
     color: #800080;
}
 a:hover, a:focus, a:active {
     color: #191970;
}
 a:focus {
     outline: thin dotted;
}
 a:hover, a:active {
     outline: 0;
}
/*-------------------------------------------------------------- 
## Menus 
--------------------------------------------------------------*/
 .main-navigation {
     clear: both;
     display: block;
     float: left;
     width: 100%;
}
 .main-navigation ul {
     display: none;
     list-style: none;
     margin: 0;
     padding-left: 0;
}
 .main-navigation li {
     float: left;
     position: relative;
}
 .main-navigation a {
     display: block;
     text-decoration: none;
}
 .main-navigation ul ul {
     box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
     float: left;
     position: absolute;
     top: 1.5em;
     left: -999em;
     z-index: 99999;
}
 .main-navigation ul ul ul {
     left: -999em;
     top: 0;
}
 .main-navigation ul ul a {
     width: 200px;
}
 .main-navigation ul ul li {
}
 .main-navigation li:hover > a, .main-navigation li.focus > a {
}
 .main-navigation ul ul :hover > a, .main-navigation ul ul .focus > a {
}
 .main-navigation ul ul a:hover, .main-navigation ul ul a.focus {
}
 .main-navigation ul li:hover > ul, .main-navigation ul li.focus > ul {
     left: auto;
}
 .main-navigation ul ul li:hover > ul, .main-navigation ul ul li.focus > ul {
     left: 100%;
}
 .main-navigation .current_page_item > a, .main-navigation .current-menu-item > a, .main-navigation .current_page_ancestor > a, .main-navigation .current-menu-ancestor > a {
     color: #2A4286;
}
/* Small menu. */
 .menu-toggle, .main-navigation.toggled ul {
     display: block;
}
 @media screen and (min-width: 37.5em) {
     .menu-toggle {
         display: none;
    }
     .main-navigation ul {
         display: block;
    }
}
 .site-main .comment-navigation, .site-main .posts-navigation, .site-main .post-navigation {
     margin: 0 0 1.5em;
     overflow: hidden;
}
 .comment-navigation .nav-previous, .posts-navigation .nav-previous, .post-navigation .nav-previous {
     float: left;
     width: 50%;
}
 .comment-navigation .nav-next, .posts-navigation .nav-next, .post-navigation .nav-next {
     float: right;
     text-align: right;
     width: 50%;
}
/*-------------------------------------------------------------- 
# Accessibility 
--------------------------------------------------------------*/
/* Text meant only for screen readers. */
 .screen-reader-text {
     clip: rect(1px, 1px, 1px, 1px);
     position: absolute !important;
     height: 1px;
     width: 1px;
     overflow: hidden;
}
 .screen-reader-text:focus {
     background-color: #f1f1f1;
     border-radius: 3px;
     box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
     clip: auto !important;
     color: #21759b;
     display: block;
     font-size: 14px;
     font-size: 0.875rem;
     font-weight: bold;
     height: auto;
     left: 5px;
     line-height: normal;
     padding: 15px 23px 14px;
     text-decoration: none;
     top: 5px;
     width: auto;
     z-index: 100000;
    /* Above WP toolbar. */
}
/* Do not show the outline on the skip link target. */
 #content[tabindex="-1"]:focus {
     outline: 0;
}
/*-------------------------------------------------------------- 
# Alignments 
--------------------------------------------------------------*/
 .alignleft {
     display: block;
     float: left;
     margin-right: 1.5em;
}
/* ... */

